
- Improved stability in /commands/Monetary/trivia.js

- Slightly updated wording in /commands/Music/np.js

- Changes to /commands/Utilities/help.js
	- Removed the dash from the dm parameter
	- The help message is now sent in the channel by default instead of a dm
	- Changed the DM success emoji to a checkmark
	- Removed the all parameter

- Updated /commands/Utilities/invite.js to dynamically create message based off the contents of invite and supportLink in /config/config.json

- Updated /handlers/Main/Command-Handler/command-handler.js
	- Updated error message when a command fails
	- Added a check to make sure the error channel exists

- Added /handlers/Main/Error-Logs/

- Updated /handlers/Main/Startup/startup.js
	- Changed wording of a couple comments
	- Updated the status interval function
		- Added a check for the status array in /config/config.json
		- Added support for the {users} and {guilds} parameters
	- Added a check for startupNotification in /config/config.json
	- Changed the startup notification to ping the bot owner from config/config.json

- Changed the variable name in /commands/Utilities/ping.js to ping instead of mess

- Changes to /commands/Fun/uno.js
	- Complete rewrite
	- Added /handlers/Uno/uno.js to handle all game logic
	- /commands/Fun/uno.js is now used only for the ui/interface aspects
	- Added more info on the game message
	- Fixed tons of bugs
	- Better game logic
	- Probably a ton more changes that I can't remember

- Changes to /handlers/Music/music.js
	- Added the ability to play from an mp3 file
	- Edited several music commands to accommodate this
	- Added /handlers/Music/Url-Parser/url-parser.js

- Added /templates for anyone wanting to host the bot themselves

- Changes to /commands/Moderation/settings.js	
	- Added /handlers/Settings and all subfolders
	- Moved all functions to their own handlers
	- Fixed issue with command ignoring. Aliases now work properly

- Update to /commands/Moderation/selfrole.js
	- Added "iam" alias